
fixed the -fno-rtti switch, which was not working correctly.

fixed the -ffor-scope switch, which was not working correctly.

fixed the -fshort-wchar switch, which was not working correctly.

fixed the -fsyntax switch, which was not working correctly.

the parity.doc documentation project has been added, which provides thorough descriptions of configuration and command line switches, also including some information about the internal workings of parity.

not finding one of the executable (assembler, compiler, linker, manifest tool) during configure, is no longer fatal. also the checks for this executables at runtime have been moved to right before using them, so a missing assembler is now ok, as long as you don't try to assemble something.

fixed a problem with, which caused structures to be misaligned in some parts of parity when using gcc 4.2, causing parity.inspector to crash on import table reads.

parity no longer generates things required for the generated loader, if there are zero symbols to load.

changed parts of the parity.runtime library to use internal output routines in favor of fprintf, to assure full functionality even when calling those functions while initializing binaries, where standard handled may not yet be initialized.

the ignorance of foreign libraries is now configurable through the IgnoreForeignLibs configuration directive.


parity 1.2.1
------------

fixed handling of frame pointer omission setting.

fixed a problem in the loader when passing NULL to dlopen.

added a little profiling information to the loader, telling the number of milliseconds it took to load all childs.

parity.inspector has been improved, and now defaults to a more ldd like interface.

parity.inspector now knows about native libraries, not linked with parity.

parity.loader has a much improved loading failure output, which allows for much easier isolation of the real loading problem for shared libraries.